// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ReposComponent > should not render p[aria-label="repo-description"] if description is null 1`] = `
<div
  data-v-7152ca0f=""
  id="repo"
  style="--lang-color: #ffffff;"
>
  <h3
    class="text-center p-1 font-bold font-serif"
    data-v-7152ca0f=""
  >
    Teste Repo 1
  </h3>
  <!--v-if-->
  <div
    class="flex justify-between p-2"
    data-v-7152ca0f=""
  >
    <p
      aria-label="repo-language"
      class="px-2 py-1 font-sans border-2 border-[var(--lang-color)] text-[var(--lang-color)]"
      data-v-7152ca0f=""
    >
      Javascript
    </p>
    <a
      class="border-white border-2 px-2 py-1 text-white transition-colors hover:border-[var(--lang-color)] hover:text-[var(--lang-color)]"
      data-v-7152ca0f=""
      href="https://github.com/testeuser/testerepo"
      target="_blank"
    >
      See Repo
    </a>
  </div>
</div>
`;

exports[`ReposComponent > should render correctly 1`] = `
<div
  data-v-7152ca0f=""
  id="repo"
  style="--lang-color: #ffffff;"
>
  <h3
    class="text-center p-1 font-bold font-serif"
    data-v-7152ca0f=""
  >
    Teste Repo 1
  </h3>
  <p
    aria-label="repo-description"
    class="text-justify font-mono text-base break-words mt-3 mb-2"
    data-v-7152ca0f=""
  >
    lorem ipsum dolor sit amet
  </p>
  <div
    class="flex justify-between p-2"
    data-v-7152ca0f=""
  >
    <p
      aria-label="repo-language"
      class="px-2 py-1 font-sans border-2 border-[var(--lang-color)] text-[var(--lang-color)]"
      data-v-7152ca0f=""
    >
      Javascript
    </p>
    <a
      class="border-white border-2 px-2 py-1 text-white transition-colors hover:border-[var(--lang-color)] hover:text-[var(--lang-color)]"
      data-v-7152ca0f=""
      href="https://github.com/testeuser/testerepo"
      target="_blank"
    >
      See Repo
    </a>
  </div>
</div>
`;
